--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>19</source>
-          <target>19</target>
+          <release>21</release>
         </configuration>
       </plugin>
       <plugin>
